static/styles.css
body {
    background-color: #FFF; /* This sets the background color to blue */
    background-size: cover;
    background-image: url('path_to_paper_texture.jpg') center center fixed;
}

#plotly-div1 {
    width: 40rem;
    height: 20rem;
    margin-bottom: 20px;
    margin-left: 30px; 
}
#plotly-div2 {
    width: 40rem;
    height: 20rem;
    margin-bottom: 20px; 
    margin-left: 30px;
}
#plotly-div3 {
    width: 40rem;
    height: 20rem;
    margin-bottom: 20px;
    margin-left: 30px; 
}

@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
* {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
}

body {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
  background-color: #364958; 
  padding: 2em;
}
body > * {
  flex-basis: 200px;
}

.btn {
  position: relative;
  display: inline-block;
  padding: 12px 36px;
  margin: 10px;
  color: #fff;
  font-size: 1.4rem;
  letter-spacing: 2px;
  border-radius: 5px;
  outline: none;
  border: none;
  cursor: pointer;
  text-transform: uppercase;
  box-sizing: border-box;
}
.btn--ripple {
  background: linear-gradient(90deg, #8D1628, #ee5d72);
  overflow: hidden;
}
.btn--ripple span {
    position: absolute;
    background: #fff;
    transform: translate(-50%, -50%);
    pointer-events: none;
    border-radius: 50%;
    animation: rippleAnimation 0.6s linear forwards;
  }
@keyframes rippleAnimation {
    0% {
      width: 0px;
      height: 0px;
      opacity: 0.5;
    }
    100% {
      width: 500px;
      height: 500px;
      opacity: 0;
    }
  }
.btn--ripple2 {
    /* background: linear-gradient(90deg, #009578, #76e7d1); */
    background: linear-gradient(90deg, #009578, #76e7d1);
    overflow: hidden;
  }
.btn--ripple2 span {
  position: absolute;
  background: #fff;
  transform: translate(-50%, -50%);
  pointer-events: none;
  border-radius: 50%;
  animation: rippleAnimation 0.6s linear forwards;
}
@keyframes rippleAnimation {
  0% {
    width: 0px;
    height: 0px;
    opacity: 0.5;
  }
  100% {
    width: 500px;
    height: 500px;
    opacity: 0;
  }
}
.btn--changeGradient {
  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
  background-size: 400%;
}
.btn--changeGradient:hover {
  animation: changeGradientAnimation 8s linear infinite;
}
@keyframes changeGradientAnimation {
  0% {
    background-position: 0%;
  }
  100% {
    background-position: 400%;
  }
}
.btn--liquidBtn {
  overflow: hidden;
}
.btn--liquidBtn span {
  position: relative;
  z-index: 1;
}
.btn--liquidBtn:hover div {
  top: -120px;
}
.btn--liquidBtn div {
  position: absolute;
  top: -80px;
  left: 0;
  width: 200px;
  height: 200px;
  background: #4973ff;
  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
  transition: 0.5s;
}
.btn--liquidBtn div::before, .btn--liquidBtn div::after {
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  width: 200%;
  height: 200%;
  transform: translate(-50%, -75%);
}
.btn--liquidBtn div::before {
  border-radius: 45%;
  background: #141414;
  animation: liquidAnimation 10s linear infinite;
}
.btn--liquidBtn div::after {
  border-radius: 40%;
  background: rgba(20, 20, 20, 0.5);
  animation: liquidAnimation 10s linear infinite;
}
@keyframes liquidAnimation {
  0% {
    transform: translate(-50%, -75%) rotate(0deg);
  }
  100% {
    transform: translate(-50%, -75%) rotate(360deg);
  }
}
.btn--snakeBorder {
  background: #383cc1;
  overflow: hidden;
}
.btn--snakeBorder::before {
  content: "";
  position: absolute;
  top: 2px;
  left: 2px;
  bottom: 2px;
}
.btn--snakeBorder span {
  position: absolute;
}
.btn--snakeBorder span:nth-child(1) {
  top: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background: linear-gradient(to right, #0c002b, #1779ff);
  animation: borderAnimation1 2s linear infinite;
}
@keyframes borderAnimation1 {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(100%);
  }
}
.btn--snakeBorder span:nth-child(2) {
  top: 0;
  right: 0;
  width: 2px;
  height: 100%;
  background: linear-gradient(to bottom, #0c002b, #1779ff);
  animation: borderAnimation2 2s linear infinite;
  animation-delay: 1s;
}
@keyframes borderAnimation2 {
  0% {
    transform: translateY(-100%);
  }
  100% {
    transform: translateY(100%);
  }
}
.btn--snakeBorder span:nth-child(3) {
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background: linear-gradient(to left, #0c002b, #1779ff);
  animation: borderAnimation3 2s linear infinite;
}
@keyframes borderAnimation3 {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}
.btn--snakeBorder span:nth-child(4) {
  top: 0;
  left: 0;
  width: 2px;
  height: 100%;
  background: linear-gradient(to top, #0c002b, #1779ff);
  animation: borderAnimation4 2s linear infinite;
  animation-delay: 1s;
}
@keyframes borderAnimation4 {
  0% {
    transform: translateY(100%);
  }
  100% {
    transform: translateY(-100%);
  }
}
.btn--neon {
  color: #03e9f4;
  overflow: hidden;
  transition: 0.5s;
  filter: hue-rotate(290deg);
}
.btn--neon:hover {
  background: #03e9f4;
  color: #050801;
  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 200px #03e9f4;
}
.btn--neon::before {
  content: "";
  position: absolute;
  top: 2px;
  left: 2px;
  bottom: 2px;
}
.btn--neon span {
  position: absolute;
  background: linear-gradient(180deg, transparent, #03e9f4);
}
.btn--neon span:nth-child(1) {
  top: 0;
  left: 0;
  width: 100%;
  height: 3px;
  animation: borderAnimation1 1s linear infinite;
}
@keyframes borderAnimation1 {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(100%);
  }
}
.btn--neon span:nth-child(2) {
  top: 0;
  right: 0;
  width: 3px;
  height: 100%;
  animation: borderAnimation2 1s linear infinite;
  animation-delay: 0.25s;
}
@keyframes borderAnimation2 {
  0% {
    transform: translateY(-100%);
  }
  100% {
    transform: translateY(100%);
  }
}
.btn--neon span:nth-child(3) {
  bottom: 0;
  left: 0;
  width: 100%;
  height: 3px;
  animation: borderAnimation3 1s linear infinite;
}
@keyframes borderAnimation3 {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}
.btn--neon span:nth-child(4) {
  top: 0;
  left: 0;
  width: 3px;
  height: 100%;
  animation: borderAnimation4 2s linear infinite;
  animation-delay: 0.25s;
}
@keyframes borderAnimation4 {
  0% {
    transform: translateY(100%);
  }
  100% {
    transform: translateY(-100%);
  }
}
.btn--hoverEffect {
  background: #0d0d0d;
  z-index: 1;
}
.btn--hoverEffect::before, .btn--hoverEffect::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  transition: transform 0.5s;
  border-radius: 4px;
}
.btn--hoverEffect::before {
  background: #03a9f4;
  transform: scale(0);
  transform-origin: bottom right;
}
.btn--hoverEffect::after {
  background: transparent;
  border: 2px solid #fff;
  box-sizing: border-box;
  transform-origin: top left;
  transform: scale(1);
}
.btn--hoverEffect:hover::before {
  transition: transform 0.5s;
  transform-origin: top left;
  transform: scale(1);
}
.btn--hoverEffect:hover::after {
  transition: transform 0.5s;
  transform-origin: top left;
  transform: scale(0);
}
.btn--hoverEffect2 {
  display: inline-block;
  z-index: 1;
  color: #ff3c83;
}
.btn--hoverEffect2:hover {
  color: #fff;
}
.btn--hoverEffect2::before {
  content: "";
  position: absolute;
  top: 0;
  left: 50%;
  right: 50%;
  bottom: 0;
  opacity: 0;
  transition: 0.5s all ease;
  box-sizing: border-box;
}
.btn--hoverEffect2:hover::before {
  border-radius: 4px;
  transition: 0.5s all ease;
  left: 0;
  right: 0;
  background: linear-gradient(90deg, #fd297a, #9424f0);
  opacity: 1;
  z-index: -1;
}
.btn--hoverEffect3 {
  display: inline-block;
  background: #fff;
  color: #333;
  overflow: hidden;
  z-index: 1;
}
.btn--hoverEffect3::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 101%;
  width: 101%;
  clip-path: polygon(0 0, 100% 0, 10% 25%, 0 100%);
  background: #444;
  border-radius: 5px;
  transition: 0.3s cubic-bezier(0.38, 1.15, 0.7, 1.12);
  box-sizing: border-box;
  z-index: -1;
}
.btn--hoverEffect3:hover::before {
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
}
.btn--hoverEffect3:hover {
  color: #fff;
}

#content-container {
    display: flex;
    align-items: center;
    padding-left: 20px; /* Adjust the left padding as needed */
}

.button-container {
    display: flex;
    gap: 10px; /* Adjust the spacing between buttons as needed */
}


footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: #242b2e; /* Background color for the footer */
    padding: 10px; /* Add padding as needed */
    text-align: center; /* Center-align the content inside the footer */
    color: #fff; /* Text color for the footer content */
}

/* The Modal (background) */
.modal {
  display: flex; /* Use flexbox for centering */
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  position: fixed;
  z-index: 2; /* Adjust if needed to ensure it's on top */
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.4);
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  padding: 20px;
  border: 1px solid #888;
  width: auto; /* Allows the box to grow with content */
  max-width: 1000px; /* Adjust as needed */
  margin: 20px; /* Provides space around the content */
  border-radius: 5px; /* Optional: rounds the corners */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/* Override tailwind utility if it's being applied */
.container {
  max-width: 100%;
  padding-right: var(--container-padding);
  padding-left: var(--container-padding);
  margin-right: auto;
  margin-left: auto;
}

/* Hidden class */
.hidden {
  display: none;
}

/* Show class */
.show {
  display: block;
} 
@keyframes pulseRed {
  0% { border-color: red; }
  50% { border-color: pink; }
  100% { border-color: red; }
}

/* Shake */
@keyframes shake {
  0% { transform: translateX(0); }
  25% { transform: translateX(-5px); }
  75% { transform: translateX(5px); }
  100% { transform: translateX(0); }
}

.error-animation {
  animation: pulseRed 1s infinite, shake 0.5s;
}

#error-display1 {
  color: red;
  font-size: 0.7rem;
  margin-top: 0;
  margin-left: 0;
}

